--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@lit-protocol/auth-helpers": "^6.1.1",
-    "@lit-protocol/contracts-sdk": "^6.1.1",
-    "@lit-protocol/lit-auth-client": "^6.1.1",
-    "@lit-protocol/lit-node-client": "^6.1.1",
-    "@lit-protocol/pkp-ethers": "^6.1.1",
+    "@lit-protocol/auth-helpers": "^6.4.0",
+    "@lit-protocol/contracts-sdk": "^6.4.0",
+    "@lit-protocol/lit-auth-client": "^6.4.0",
+    "@lit-protocol/lit-node-client": "^6.4.0",
+    "@lit-protocol/pkp-ethers": "^6.4.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@simplewebauthn/server": "^10.0.1",
+    "@simplewebauthn/types": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
